# bkms2022_project

./: .env  .env-template  .env.template  .gitignore  Dockerfile  Flask_rec.ipynb  PyToPos.py  README.md  Recommendation.ipynb  Untitled.ipynb  docker-compose.yml  pyproject.toml
DblpJavaParser/: .gitignore  DblpJavaParser.java  Makefile  README  README.md  settings.gradle
DblpJavaParser/app/: build.gradle
DblpJavaParser/javadoc/: allclasses-noframe.html  index.html  overview-frame.html  package-list  serialized-form.html
DblpJavaParser/javadoc/org/dblp/: DblpInterface.html  package-frame.html  package-summary.html
DblpJavaParser/javadoc/org/dblp/mmdb/: FieldReader.html  InvalidPersonNameException.html  MultiStreamTitle.html  PersonIDType.html  PersonName.html  PublicationStreamIDType.html  Redirect.html  TableOfContents.html  package-frame.html  package-summary.html  package-tree.html
DblpJavaParser/javadoc/org/dblp/util/: Tally.html  package-frame.html  package-summary.html
DblpJavaParser/src/edu/snu/bkms/: App.java
config/: jupyter_lab_config.py
frontend/: .env  README.md  app.py  celery.py  celery_inst.py  config.py  tasks.py
frontend/Data/: part1.json
frontend/api/: database.py  interface.py  publications.py
frontend/static/: style.css
frontend/storage/: neo4j_store.py  postgres_store.py
frontend/templates/: base.jinja  index.jinja  recommend.jinja  search.jinja  upload.jinja
misc/: preprocess_dblp_into_postgresql.ipynb
parser/app/: build.gradle
parser/javadoc/: allclasses-frame.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  overview-summary.html  overview-tree.html
parser/javadoc/org/dblp/: package-tree.html
recommendation_model/: BERT_keyword.ipynb  Bigquery.ipynb  Embedding&Recommendation.ipynb  Neo_py_big.ipynb  Postgres.ipynb  ipynb_code.ipynb  결과페이지 및 이슈.pptx
recommendation_model/abstract_based/: app_abstract.py
recommendation_model/abstract_based/templates/: positive.html
recommendation_model/local_bigquery/: dbmsproject-350608-bc1d3264916d.json  localBigquery.ipynb
recommendation_model/title_based/: app_title.py
recommendation_model/title_based/templates/: index.html  negative.html
(+84 files in other folders)
